Build fails bugs not fixed